[package]
name = "syncth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
hyper = "1.6.0"
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
rand = { version = "0.9.0", features = ["serde", "thread_rng"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rng = "0.1.0"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = "1.43.0"
